hphp/hack/test/typecheck/refinements/inter_array_ops.php.like_types.exp
File "inter_array_ops.php", line 6, characters 27-28:
Invalid argument (Typing[4110])
File "printf.hhi", line 133, characters 30-56:
Expected ~HH\FormatString<~PlainSprintf> because it is an unenforceable type
File "inter_array_ops.php", line 6, characters 27-28:
But got string
